# src/main/java/ai/memas/memasclient/model/NamespaceDoesNotExistError.java
@@ -1,0 +1,324 @@
+/*
+ * MeMaS DP APIs
+ * This is the Data Plane client for MeMaS (Memory Management Service).  See https://github.com/memas-ai/MeMaS for more details.
+ *
+ * The version of the OpenAPI document: 0.1.0
+ * Contact: max.yu@memas.ai
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+package ai.memas.memasclient.model;
+
+import java.util.Objects;
+import java.util.Arrays;
+import com.google.gson.TypeAdapter;
+import com.google.gson.annotations.JsonAdapter;
+import com.google.gson.annotations.SerializedName;
+import com.google.gson.stream.JsonReader;
+import com.google.gson.stream.JsonWriter;
+import java.io.IOException;
+
+import com.google.gson.Gson;
+import com.google.gson.GsonBuilder;
+import com.google.gson.JsonArray;
+import com.google.gson.JsonDeserializationContext;
+import com.google.gson.JsonDeserializer;
+import com.google.gson.JsonElement;
+import com.google.gson.JsonObject;
+import com.google.gson.JsonParseException;
+import com.google.gson.TypeAdapterFactory;
+import com.google.gson.reflect.TypeToken;
+import com.google.gson.TypeAdapter;
+import com.google.gson.stream.JsonReader;
+import com.google.gson.stream.JsonWriter;
+import java.io.IOException;
+
+import java.lang.reflect.Type;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Map.Entry;
+import java.util.Set;
+
+import ai.memas.memasclient.invoker.JSON;
+
+/**
+ * Error returned when the namespace object (corpus/user) does not exist
+ */
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaClientCodegen", date = "2023-09-14T00:12:57.878084868-07:00[America/Los_Angeles]")
+public class NamespaceDoesNotExistError {
+  /**
+   * Gets or Sets errorCode
+   */
+  @JsonAdapter(ErrorCodeEnum.Adapter.class)
+  public enum ErrorCodeEnum {
+    NAMESPACE_DOES_NOT_EXIST("namespace_does_not_exist");
+
+    private String value;
+
+    ErrorCodeEnum(String value) {
+      this.value = value;
+    }
+
+    public String getValue() {
+      return value;
+    }
+
+    @Override
+    public String toString() {
+      return String.valueOf(value);
+    }
+
+    public static ErrorCodeEnum fromValue(String value) {
+      for (ErrorCodeEnum b : ErrorCodeEnum.values()) {
+        if (b.value.equals(value)) {
+          return b;
+        }
+      }
+      throw new IllegalArgumentException("Unexpected value '" + value + "'");
+    }
+
+    public static class Adapter extends TypeAdapter<ErrorCodeEnum> {
+      @Override
+      public void write(final JsonWriter jsonWriter, final ErrorCodeEnum enumeration) throws IOException {
+        jsonWriter.value(enumeration.getValue());
+      }
+
+      @Override
+      public ErrorCodeEnum read(final JsonReader jsonReader) throws IOException {
+        String value =  jsonReader.nextString();
+        return ErrorCodeEnum.fromValue(value);
+      }
+    }
+  }
+
+  public static final String SERIALIZED_NAME_ERROR_CODE = "error_code";
+  @SerializedName(SERIALIZED_NAME_ERROR_CODE)
+  private ErrorCodeEnum errorCode;
+
+  public static final String SERIALIZED_NAME_MSG = "msg";
+  @SerializedName(SERIALIZED_NAME_MSG)
+  private String msg;
+
+  public static final String SERIALIZED_NAME_DETAILS = "details";
+  @SerializedName(SERIALIZED_NAME_DETAILS)
+  private String details;
+
+  public NamespaceDoesNotExistError() {
+  }
+
+  public NamespaceDoesNotExistError errorCode(ErrorCodeEnum errorCode) {
+    
+    this.errorCode = errorCode;
+    return this;
+  }
+
+   /**
+   * Get errorCode
+   * @return errorCode
+  **/
+  @javax.annotation.Nonnull
+  public ErrorCodeEnum getErrorCode() {
+    return errorCode;
+  }
+
+
+  public void setErrorCode(ErrorCodeEnum errorCode) {
+    this.errorCode = errorCode;
+  }
+
+
+  public NamespaceDoesNotExistError msg(String msg) {
+    
+    this.msg = msg;
+    return this;
+  }
+
+   /**
+   * Get msg
+   * @return msg
+  **/
+  @javax.annotation.Nonnull
+  public String getMsg() {
+    return msg;
+  }
+
+
+  public void setMsg(String msg) {
+    this.msg = msg;
+  }
+
+
+  public NamespaceDoesNotExistError details(String details) {
+    
+    this.details = details;
+    return this;
+  }
+
+   /**
+   * Get details
+   * @return details
+  **/
+  @javax.annotation.Nullable
+  public String getDetails() {
+    return details;
+  }
+
+
+  public void setDetails(String details) {
+    this.details = details;
+  }
+
+
+
+  @Override
+  public boolean equals(Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    NamespaceDoesNotExistError namespaceDoesNotExistError = (NamespaceDoesNotExistError) o;
+    return Objects.equals(this.errorCode, namespaceDoesNotExistError.errorCode) &&
+        Objects.equals(this.msg, namespaceDoesNotExistError.msg) &&
+        Objects.equals(this.details, namespaceDoesNotExistError.details);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(errorCode, msg, details);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class NamespaceDoesNotExistError {\n");
+    sb.append("    errorCode: ").append(toIndentedString(errorCode)).append("\n");
+    sb.append("    msg: ").append(toIndentedString(msg)).append("\n");
+    sb.append("    details: ").append(toIndentedString(details)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+
+
+  public static HashSet<String> openapiFields;
+  public static HashSet<String> openapiRequiredFields;
+
+  static {
+    // a set of all properties/fields (JSON key names)
+    openapiFields = new HashSet<String>();
+    openapiFields.add("error_code");
+    openapiFields.add("msg");
+    openapiFields.add("details");
+
+    // a set of required properties/fields (JSON key names)
+    openapiRequiredFields = new HashSet<String>();
+    openapiRequiredFields.add("error_code");
+    openapiRequiredFields.add("msg");
+  }
+
+ /**
+  * Validates the JSON Object and throws an exception if issues found
+  *
+  * @param jsonObj JSON Object
+  * @throws IOException if the JSON Object is invalid with respect to NamespaceDoesNotExistError
+  */
+  public static void validateJsonObject(JsonObject jsonObj) throws IOException {
+      if (jsonObj == null) {
+        if (!NamespaceDoesNotExistError.openapiRequiredFields.isEmpty()) { // has required fields but JSON object is null
+          throw new IllegalArgumentException(String.format("The required field(s) %s in NamespaceDoesNotExistError is not found in the empty JSON string", NamespaceDoesNotExistError.openapiRequiredFields.toString()));
+        }
+      }
+
+      Set<Entry<String, JsonElement>> entries = jsonObj.entrySet();
+      // check to see if the JSON string contains additional fields
+      for (Entry<String, JsonElement> entry : entries) {
+        if (!NamespaceDoesNotExistError.openapiFields.contains(entry.getKey())) {
+          throw new IllegalArgumentException(String.format("The field `%s` in the JSON string is not defined in the `NamespaceDoesNotExistError` properties. JSON: %s", entry.getKey(), jsonObj.toString()));
+        }
+      }
+
+      // check to make sure all required properties/fields are present in the JSON string
+      for (String requiredField : NamespaceDoesNotExistError.openapiRequiredFields) {
+        if (jsonObj.get(requiredField) == null) {
+          throw new IllegalArgumentException(String.format("The required field `%s` is not found in the JSON string: %s", requiredField, jsonObj.toString()));
+        }
+      }
+      if (!jsonObj.get("error_code").isJsonPrimitive()) {
+        throw new IllegalArgumentException(String.format("Expected the field `error_code` to be a primitive type in the JSON string but got `%s`", jsonObj.get("error_code").toString()));
+      }
+      if (!jsonObj.get("msg").isJsonPrimitive()) {
+        throw new IllegalArgumentException(String.format("Expected the field `msg` to be a primitive type in the JSON string but got `%s`", jsonObj.get("msg").toString()));
+      }
+      if ((jsonObj.get("details") != null && !jsonObj.get("details").isJsonNull()) && !jsonObj.get("details").isJsonPrimitive()) {
+        throw new IllegalArgumentException(String.format("Expected the field `details` to be a primitive type in the JSON string but got `%s`", jsonObj.get("details").toString()));
+      }
+  }
+
+  public static class CustomTypeAdapterFactory implements TypeAdapterFactory {
+    @SuppressWarnings("unchecked")
+    @Override
+    public <T> TypeAdapter<T> create(Gson gson, TypeToken<T> type) {
+       if (!NamespaceDoesNotExistError.class.isAssignableFrom(type.getRawType())) {
+         return null; // this class only serializes 'NamespaceDoesNotExistError' and its subtypes
+       }
+       final TypeAdapter<JsonElement> elementAdapter = gson.getAdapter(JsonElement.class);
+       final TypeAdapter<NamespaceDoesNotExistError> thisAdapter
+                        = gson.getDelegateAdapter(this, TypeToken.get(NamespaceDoesNotExistError.class));
+
+       return (TypeAdapter<T>) new TypeAdapter<NamespaceDoesNotExistError>() {
+           @Override
+           public void write(JsonWriter out, NamespaceDoesNotExistError value) throws IOException {
+             JsonObject obj = thisAdapter.toJsonTree(value).getAsJsonObject();
+             elementAdapter.write(out, obj);
+           }
+
+           @Override
+           public NamespaceDoesNotExistError read(JsonReader in) throws IOException {
+             JsonObject jsonObj = elementAdapter.read(in).getAsJsonObject();
+             validateJsonObject(jsonObj);
+             return thisAdapter.fromJsonTree(jsonObj);
+           }
+
+       }.nullSafe();
+    }
+  }
+
+ /**
+  * Create an instance of NamespaceDoesNotExistError given an JSON string
+  *
+  * @param jsonString JSON string
+  * @return An instance of NamespaceDoesNotExistError
+  * @throws IOException if the JSON string is invalid with respect to NamespaceDoesNotExistError
+  */
+  public static NamespaceDoesNotExistError fromJson(String jsonString) throws IOException {
+    return JSON.getGson().fromJson(jsonString, NamespaceDoesNotExistError.class);
+  }
+
+ /**
+  * Convert an instance of NamespaceDoesNotExistError to an JSON string
+  *
+  * @return JSON string
+  */
+  public String toJson() {
+    return JSON.getGson().toJson(this);
+  }
+}
+
